runtime/tests/cases/variables/errors/save_set_undefined.bobbin
set never_declared = 100
The value is {never_declared}.
